modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <nav class="grey darken-4" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Calculadora de CR</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Github</a></li>
+        <li><a href="https://github.com/MatheusWTF/Calculadora-de-CR-Cederj">Github</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Github</a></li>
+        <li><a href="https://github.com/MatheusWTF/Calculadora-de-CR-Cederj">Github</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
